apps/rancher/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-http-route
  namespace: cattle-system
spec:
  parentRefs:
    - name: rancher-gateway
  hostnames:
    - "rancher.inforisk.ma"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rancher
          port: 80
